src/objects/Project_Spend__c.object
<CustomObject>
    <description>An object created to track the SOW and spend of a given project</description>
    <fields>
        <fullName>Actual_Spend__c</fullName>
        <label>Actual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternate_Vendor__c</fullName>
        <label>Alternate Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BT_Notes__c</fullName>
        <label>BT Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Being_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Being Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brazil_Category__c</fullName>
        <label>Brazil Category</label>
        <picklist>
            <picklistValues>
                <fullName>QA &amp; Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Researching</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitively_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitively Bid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract #</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>SW Spend Requests</relationshipLabel>
        <relationshipName>SW_Spend_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Type__c</fullName>
        <label>Engagement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Spend_ANNUAL__c</fullName>
        <formula>Estimated_Spend__c / ( (End_Date__c -  Start_Date__c )/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Spend (ANNUAL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Spend__c</fullName>
        <label>Estimated Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FTE_Adjustment_Reason__c</fullName>
        <label>FTE Adjustment Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FTE_Adjustment__c</fullName>
        <description>If Total Cost Savings needs to be adjusted.</description>
        <inlineHelpText>Any adjusted Savings, please update here.</inlineHelpText>
        <label>FTE Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FTE_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this SSR and the Contractor(s) associated with it a candidate to become an FTE?</inlineHelpText>
        <label>FTE Candidate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTE_Conversation_Cost_Savings__c</fullName>
        <formula>(TOTAL_FTE_Cost_Fully_Loaded__c -  Estimated_Spend_ANNUAL__c) +  FTE_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTE Conversation Cost Savings (ANNUAL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FTE_Cost_Fully_Loaded__c</fullName>
        <formula>if( AND(ISPICKVAL(FTE_Location__c, &quot;US - Mart&quot;), ISPICKVAL(FTE_Type__c, &quot;Developer&quot;)), 160000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;US - Mart&quot;), ISPICKVAL(FTE_Type__c, &quot;Test&quot;)), 75000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;US - SV&quot;), ISPICKVAL(FTE_Type__c, &quot;Developer&quot;)), 175000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;US - SV&quot;), ISPICKVAL(FTE_Type__c, &quot;Test&quot;)), 80000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;India&quot;), ISPICKVAL(FTE_Type__c, &quot;Developer&quot;)), 28463,
if( AND(ISPICKVAL(FTE_Location__c, &quot;India&quot;), ISPICKVAL(FTE_Type__c, &quot;Test&quot;)), 22770,
if( AND(ISPICKVAL(FTE_Location__c, &quot;Brazil - El Dorado&quot;), ISPICKVAL(FTE_Type__c, &quot;Developer&quot;)), 100000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;Brazil - El Dorado&quot;), ISPICKVAL(FTE_Type__c, &quot;Test&quot;)), 100000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;Brazil - CESAR&quot;), ISPICKVAL(FTE_Type__c, &quot;Developer&quot;)), 100000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;Brazil - CESAR&quot;), ISPICKVAL(FTE_Type__c, &quot;Test&quot;)), 100000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;Brazil - Venturus&quot;), ISPICKVAL(FTE_Type__c, &quot;Developer&quot;)), 100000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;Brazil - Venturus&quot;), ISPICKVAL(FTE_Type__c, &quot;Test&quot;)), 100000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;Brazil - CIN&quot;), ISPICKVAL(FTE_Type__c, &quot;Developer&quot;)), 100000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;Brazil - CIN&quot;), ISPICKVAL(FTE_Type__c, &quot;Test&quot;)), 100000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;China - Beijing&quot;), ISPICKVAL(FTE_Type__c, &quot;Developer&quot;)), 65000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;China - Beijing&quot;), ISPICKVAL(FTE_Type__c, &quot;Test&quot;)), 50000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;China - Nanjing&quot;), ISPICKVAL(FTE_Type__c, &quot;Developer&quot;)), 65000,
if( AND(ISPICKVAL(FTE_Location__c, &quot;China - Nanjing&quot;), ISPICKVAL(FTE_Type__c, &quot;Test&quot;)), 50000,

0))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Annual blended cost of an FTE based on Location and Type.</inlineHelpText>
        <label>FTE Cost (Fully Loaded - ANNUAL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FTE_Justification__c</fullName>
        <label>FTE Justification</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FTE_Location__c</fullName>
        <label>FTE Location</label>
        <picklist>
            <picklistValues>
                <fullName>US - Mart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - SV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil - El Dorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil - CESAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil - Venturus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil - CIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China - Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China - Nanjing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FTE_Type__c</fullName>
        <label>FTE Type</label>
        <picklist>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FY2015_FTE_Cost__c</fullName>
        <formula>(DATE(2016, 03, 31) -  Planned_FTE_Start_Date__c ) /365 * TOTAL_FTE_Cost_Fully_Loaded__c</formula>
        <label>FY2015 FTE Cost (TOTAL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>CA-101</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL-93</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL-312</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZIN-63</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONT-88</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBR-01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZBR-05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCH68</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZUK-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola Jag,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Dorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.E.S.A.R.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIn - UFPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MMID_Email__c</fullName>
        <formula>Requester__r.MMID__c + &apos;@motorola.com&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMID Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NDA</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>Project_Spends1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Information_Details__c</fullName>
        <label>Needs Information Details</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>New_or_Existing_Engagement__c</fullName>
        <label>New or Existing Engagement?</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR__c</fullName>
        <label>PR #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_SSR_End_Date__c</fullName>
        <formula>Parent_SW_Spend_Request__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent SSR End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_SSR_Start_Date__c</fullName>
        <formula>Parent_SW_Spend_Request__r.Start_Date__c</formula>
        <label>Parent SSR Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_SW_Spend_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent SW Spend Request</label>
        <referenceTo>Project_Spend__c</referenceTo>
        <relationshipLabel>SW Spend Requests</relationshipLabel>
        <relationshipName>SW_Spend_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <formula>IF( !ISBLANK(PR__c), IF( ISBLANK(PO__c),&quot;PR&quot;,&quot;PR &amp; PO&quot; ), IF( !ISBLANK(PO__c),&quot;PO&quot;,&quot;PR &amp; PO NOT PROCESSED&quot;) )</formula>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_FTE_Conversions__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>How many FTEs will be converted from this SSR?</inlineHelpText>
        <label>Planned FTE Conversions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_FTE_Start_Date__c</fullName>
        <label>Planned FTE Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Vendor__c</fullName>
        <label>Preferred Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipName>Project_Spends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLT_1__c</fullName>
        <formula>if(ISBLANK(Requester__r.OrgLevel4MgrFullName__c), Requester__r.Name , Requester__r.OrgLevel4MgrFullName__c)</formula>
        <label>SLT +1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLT_2__c</fullName>
        <formula>if(ISBLANK(Requester__r.OrgLevel5MgrFullName__c), Requester__r.Name , Requester__r.OrgLevel5MgrFullName__c)</formula>
        <label>SLT +2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_Document_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW Document Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOW_Status__c</fullName>
        <formula>text(SOW__r.Apttus__Status_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOW Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SOW</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>Project_Spends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOW_number__c</fullName>
        <formula>SOW__r.Apttus__FF_Agreement_Number__c</formula>
        <label>SOW #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSR_No__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSR_No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSR_Status__c</fullName>
        <label>SSR Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW SLT Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Termination</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SW_Exp_Rel_Type__c</fullName>
        <formula>SW_Experiences_and_Releases__r.Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SW Exp/Rel Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Experiences_and_Releases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the SSR is related to a SW Experience/Release, please select</inlineHelpText>
        <label>SW Experiences and Releases</label>
        <referenceTo>SW_Experiences_and_Releases__c</referenceTo>
        <relationshipLabel>SW Spend Requests</relationshipLabel>
        <relationshipName>SW_Spend_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SW_Program_Manager__c</fullName>
        <formula>SW_Project__r.Program_Manager__r.FirstName + &apos; &apos; + SW_Project__r.Program_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SW Program Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Project_Lead_Email__c</fullName>
        <formula>SW_Project__r.SW_Leader__r.MMID__c + &apos;@motorola.com&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SW Project Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Project_Lead_Phone__c</fullName>
        <formula>SW_Project__r.SW_Leader__r.MobilePhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SW Project Lead Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Project_Type__c</fullName>
        <formula>text (SW_Project__r.Type__c)</formula>
        <label>SW Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the SSR is related to a SW Project, please select</inlineHelpText>
        <label>SW Project</label>
        <referenceTo>JIRA_Project__c</referenceTo>
        <relationshipLabel>SW Spend Requests</relationshipLabel>
        <relationshipName>Project_Spends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spend_Breakdown__c</fullName>
        <formula>if( text(Spend_Location__c) = &quot;Brazil&quot;, &quot;BRAZIL&quot;, &quot;NON-BRAZIL&quot;)</formula>
        <label>Spend Breakdown</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spend_Location__c</fullName>
        <label>Spend Location</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spend_Type__c</fullName>
        <label>Spend Type</label>
        <picklist>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination Candidate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TOTAL_FTE_Cost_Fully_Loaded__c</fullName>
        <formula>Planned_FTE_Conversions__c *  FTE_Cost_Fully_Loaded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Annual blended FTE Costs by Location and Type multiplied by the total # of FTEs.</inlineHelpText>
        <label>TOTAL FTE Cost (Fully Loaded - ANNUAL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Product Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CXD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain &amp; Service Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Project_Spends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>current_quarter__c</fullName>
        <formula>IF( 

YEAR(Start_Date__c) = YEAR(TODAY()) &amp;&amp;  YEAR(End_Date__c) = YEAR(TODAY()) &amp;&amp; 
IF( MOD(MONTH( Start_Date__c ),3) = 0 , FLOOR( MONTH( Start_Date__c ) / 3 ) , FLOOR( MONTH(Start_Date__c) / 3 ) + 1) = 
IF( MOD(MONTH(TODAY()),3) = 0 , FLOOR( MONTH(TODAY()) / 3 ) , FLOOR( MONTH(TODAY()) / 3 ) + 1) &amp;&amp;
IF( MOD(MONTH(TODAY()),3) = 0 , FLOOR( MONTH(TODAY()) / 3 ) , FLOOR( MONTH(TODAY()) / 3 ) + 1) = 
IF( MOD(MONTH(End_Date__c),3) = 0 , FLOOR( MONTH(End_Date__c) / 3 ) , FLOOR( MONTH(End_Date__c) / 3 ) + 1) , 

&quot;S+E&quot;, 

IF( 

YEAR(Start_Date__c) = YEAR(TODAY()) &amp;&amp; 
IF( MOD(MONTH( Start_Date__c ),3) = 0 , FLOOR( MONTH( Start_Date__c ) / 3 ) , FLOOR( MONTH(Start_Date__c) / 3 ) + 1) = 
IF( MOD(MONTH(TODAY()),3) = 0 , FLOOR( MONTH(TODAY()) / 3 ) , FLOOR( MONTH(TODAY()) / 3 ) + 1), 

&quot;S&quot;, 

IF( 

YEAR(End_Date__c) = YEAR(TODAY()) &amp;&amp; 
IF( MOD(MONTH(TODAY()),3) = 0 , FLOOR( MONTH(TODAY()) / 3 ) , FLOOR( MONTH(TODAY()) / 3 ) + 1) = 
IF( MOD(MONTH(End_Date__c),3) = 0 , FLOOR( MONTH(End_Date__c) / 3 ) , FLOOR( MONTH(End_Date__c) / 3 ) + 1) , 

&quot;E&quot;,

&quot;OTHER&quot; ) 

)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Quarter Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Contractors__c</fullName>
        <description>The total number of contractors expected for this SSR request</description>
        <label># of Contractors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_FTE__c</fullName>
        <label># of FTE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Resources_Total__c</fullName>
        <formula>of_Contractors__c +  of_FTE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Resources (Total)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>SW Spend Request</label>
    <listViews>
        <fullName>ALL_SSR_Status_Overview</fullName>
        <columns>NAME</columns>
        <columns>SSR_Status__c</columns>
        <columns>Requester__c</columns>
        <columns>Estimated_Spend__c</columns>
        <columns>Name__c</columns>
        <columns>SW_Project__c</columns>
        <columns>Preferred_Vendor__c</columns>
        <columns>PR__c</columns>
        <columns>PO__c</columns>
        <columns>Engagement_Type__c</columns>
        <columns>New_or_Existing_Engagement__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Spend__c.SW</value>
        </filters>
        <label>ALL SSR Status Overview</label>
    </listViews>
    <listViews>
        <fullName>BALAJI_SOWs_2015_non_brazil</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Estimated_Spend__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>SSR_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLT_1__c</field>
            <operation>contains</operation>
            <value>Balaji</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Spend__c.SW</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>SSR_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,On Hold</value>
        </filters>
        <label>BALAJI SOWs 2015 (Non-Brazil)</label>
    </listViews>
    <listViews>
        <fullName>BRAZIL_SSR_Status_Overview</fullName>
        <columns>NAME</columns>
        <columns>SSR_Status__c</columns>
        <columns>SLT_1__c</columns>
        <columns>Requester__c</columns>
        <columns>Estimated_Spend__c</columns>
        <columns>Name__c</columns>
        <columns>SW_Project__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Location__c</columns>
        <columns>SOW__c</columns>
        <columns>PR__c</columns>
        <columns>PO__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>01240000000DvGd</value>
        </filters>
        <label>BRAZIL_SSR Status Overview</label>
    </listViews>
    <listViews>
        <fullName>Balaji_SOWs_FULLY_Approved</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>SW_Project__c</columns>
        <columns>Requester__c</columns>
        <columns>SSR_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLT_1__c</field>
            <operation>contains</operation>
            <value>Balaji</value>
        </filters>
        <filters>
            <field>SSR_Status__c</field>
            <operation>equals</operation>
            <value>PO In Process,Fully Approved</value>
        </filters>
        <label>Balaji SOWs FULLY APPROVED</label>
    </listViews>
    <listViews>
        <fullName>Balaji_SOWs_TO_REVIEW</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>SW_Project__c</columns>
        <columns>Requester__c</columns>
        <columns>SSR_Status__c</columns>
        <columns>BT_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLT_1__c</field>
            <operation>contains</operation>
            <value>Balaji</value>
        </filters>
        <filters>
            <field>SSR_Status__c</field>
            <operation>equals</operation>
            <value>SW SLT Approved</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Spend__c.SW</value>
        </filters>
        <label>Balaji SOWs TO REVIEW</label>
    </listViews>
    <listViews>
        <fullName>Brazil</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Brazil_Category__c</columns>
        <columns>Estimated_Spend__c</columns>
        <columns>of_FTE__c</columns>
        <columns>of_Contractors__c</columns>
        <columns>Name__c</columns>
        <columns>Preferred_Vendor__c</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Location__c</columns>
        <columns>SSR_Status__c</columns>
        <columns>SOW_number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Spend_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Spend_Breakdown__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>SSR_Status__c</field>
            <operation>notContain</operation>
            <value>Cancelled</value>
        </filters>
        <label>Brazil</label>
    </listViews>
    <listViews>
        <fullName>Budget_Expected_Items</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>SLT_1__c</columns>
        <columns>Requester__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Spend_Type__c</field>
            <operation>equals</operation>
            <value>Budget</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Spend__c.SW</value>
        </filters>
        <label>Budget &amp; Expected Items</label>
    </listViews>
    <listViews>
        <fullName>China_Re_Entry_Spend</fullName>
        <columns>NAME</columns>
        <columns>Parent_SW_Spend_Request__c</columns>
        <columns>Requester__c</columns>
        <columns>of_Contractors__c</columns>
        <columns>Estimated_Spend__c</columns>
        <columns>Name__c</columns>
        <columns>Spend_Location__c</columns>
        <columns>SSR_Status__c</columns>
        <columns>Preferred_Vendor__c</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>SW_Project__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name__c</field>
            <operation>contains</operation>
            <value>china</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Spend__c.SW</value>
        </filters>
        <label>China Re-Entry Spend</label>
    </listViews>
    <listViews>
        <fullName>FTE_CONVERSION_CANDIDATES</fullName>
        <columns>NAME</columns>
        <columns>SLT_1__c</columns>
        <columns>FTE_Type__c</columns>
        <columns>FTE_Location__c</columns>
        <columns>FTE_Justification__c</columns>
        <columns>of_Contractors__c</columns>
        <columns>Planned_FTE_Conversions__c</columns>
        <columns>Planned_FTE_Start_Date__c</columns>
        <columns>FTE_Cost_Fully_Loaded__c</columns>
        <columns>FY2015_FTE_Cost__c</columns>
        <columns>FTE_Conversation_Cost_Savings__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Spend__c.SW</value>
        </filters>
        <filters>
            <field>FTE_Candidate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>FTE CONVERSION CANDIDATES</label>
    </listViews>
    <listViews>
        <fullName>JVP_Stability</fullName>
        <columns>NAME</columns>
        <columns>Comments__c</columns>
        <columns>SLT_1__c</columns>
        <columns>Name__c</columns>
        <columns>SSR_Status__c</columns>
        <columns>SW_Project__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Spend__c.SW</value>
        </filters>
        <filters>
            <field>Name__c</field>
            <operation>contains</operation>
            <value>stab</value>
        </filters>
        <filters>
            <field>SLT_1__c</field>
            <operation>contains</operation>
            <value>Jim</value>
        </filters>
        <label>JVP Stability</label>
    </listViews>
    <listViews>
        <fullName>Rejected_SSR_Status</fullName>
        <columns>NAME</columns>
        <columns>SSR_Status__c</columns>
        <columns>Requester__c</columns>
        <columns>Estimated_Spend__c</columns>
        <columns>SW_Project__c</columns>
        <columns>Name__c</columns>
        <columns>Preferred_Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SSR_Status__c</field>
            <operation>equals</operation>
            <value>SW SLT Not Approved</value>
        </filters>
        <label>Rejected SSR Status</label>
    </listViews>
</CustomObject>